2013-10-30  Sharad Singhai  <singhai@google.com>

PR middle-end/58134
	* opts.c (common_handle_option): Remove deprecated option
	-ftree-vectorizer-verbose.
	* doc/invoke.texi (Debugging Options): Ditto.
	* opts-global.c (handle_common_deferred_options): Ditto.
	(dump_remap_tree_vectorizer_verbose): Delete.
	* common.opt: Set -ftree-vectorizer-verbose as an ignored option.

ada/ChangeLog
	* gnat_ugn.texi: Remove option description for PR middle-end/58134.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@204244 138bc75d-0d04-0410-961f-82ee72b054a4